# Product-and-Category

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html
src/: base_product.py  category.py  iterators.py  lawn_grass.py  mixins.py  product.py  smartphone.py
tests/: test_abstract.py  test_base_product.py  test_category.py  test_exceptions.py  test_inheritance.py  test_iterators.py  test_lawn_grass.py  test_mixin.py  test_product.py  test_smartphone.py
