[tool.poetry]
name = "online-store"
version = "0.1.0"
description = "Домашка: Product и Category с классовыми счётчиками"
authors = ["HapkoM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"